--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,6 @@ backend/.env
 
 backend/**/*.h2.db
 backend/**/*.mv.db
-
-
+backend/e-shop/src/main/resources/data/*_seed_*.sql
+*.pdf
+*-requirements.md
