--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,6 @@ services:
     #   interval: 5s
     #   timeout: 3s
     #   retries: 10
-
   api:
     build:
       context: ./backend/e-shop
@@ -26,10 +25,31 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/eshop
       SPRING_DATASOURCE_USERNAME: app
       SPRING_DATASOURCE_PASSWORD: secret
+      STORAGE_MINIO_ENDPOINT: http://minio:9000
+      STORAGE_MINIO_ACCESS_KEY: admin
+      STORAGE_MINIO_SECRET_KEY: admin123
+      STORAGE_MINIO_BUCKET: products
+      STORAGE_MINIO_REGION: us-east-1
+      STORAGE_MINIO_PUBLIC_URL: http://localhost:9000
     ports:
       - "8080:8080"
     depends_on:
       - postgres
+      - minio
+    restart: unless-stopped
+  minio:
+    image: minio/minio:RELEASE.2025-09-07T16-13-09Z-cpuv1
+    container_name: eshop-minio
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: admin123
+    command: server /data --console-address ":9090"
+    ports:
+      - "9000:9000"
+      - "9090:9090"
+    volumes:
+      - minio_data:/data
     restart: unless-stopped
 volumes:
   postgres_data:
+  minio_data:
