chore(docker): surface mail activation env defaults

--- a/backend/e-shop/.env.properties.example
+++ b/backend/e-shop/.env.properties.example
@@ -2,6 +2,6 @@ SPRING_MAIL_HOST=smtp.gmail.com
 SPRING_MAIL_PORT=587
 SPRING_MAIL_USERNAME=your-gmail-address@gmail.com
 SPRING_MAIL_PASSWORD=your-app-password
-APP_MAIL_FROM=no-reply@eshop.local
+APP_MAIL_FROM=E-Shop no-reply <no-reply@eshop.local>
 APP_ACTIVATION_BASE_URL=http://localhost:5173/auth/activate
 APP_ACTIVATION_TOKEN_EXPIRATION_MINUTES=1440
