--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,13 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/eshop
       SPRING_DATASOURCE_USERNAME: app
       SPRING_DATASOURCE_PASSWORD: secret
+      SPRING_MAIL_HOST: smtp.gmail.com
+      SPRING_MAIL_PORT: 587
+      SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME:-}
+      SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD:-}
+      APP_MAIL_FROM: ${APP_MAIL_FROM:-E-Shop no-reply <no-reply@eshop.local>}
+      APP_ACTIVATION_BASE_URL: ${APP_ACTIVATION_BASE_URL:-http://localhost:8080/api/auth/activate}
+      APP_ACTIVATION_TOKEN_EXPIRATION_MINUTES: ${APP_ACTIVATION_TOKEN_EXPIRATION_MINUTES:-1440}
       STORAGE_MINIO_ENDPOINT: http://minio:9000
       STORAGE_MINIO_ACCESS_KEY: admin
       STORAGE_MINIO_SECRET_KEY: admin123
