--- a/admin/package.json
+++ b/admin/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.2.1",
     "@tailwindcss/vite": "^4.1.16",
+    "@types/sockjs-client": "^1.5.4",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.16",
     "toast": "^0.5.4"
   },
