--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       APP_MAIL_FROM: ${APP_MAIL_FROM:-E-Shop no-reply <no-reply@eshop.local>}
       APP_ACTIVATION_BASE_URL: ${APP_ACTIVATION_BASE_URL:-http://localhost:8080/api/auth/activate}
       APP_ACTIVATION_TOKEN_EXPIRATION_MINUTES: ${APP_ACTIVATION_TOKEN_EXPIRATION_MINUTES:-1440}
+      APP_PASSWORD_RESET_TOKEN_EXPIRATION_MINUTES: ${APP_PASSWORD_RESET_TOKEN_EXPIRATION_MINUTES:-15}
       STORAGE_MINIO_ENDPOINT: http://minio:9000
       STORAGE_MINIO_ACCESS_KEY: admin
       STORAGE_MINIO_SECRET_KEY: admin123
