--- a/backend/e-shop/.env.properties.example
+++ b/backend/e-shop/.env.properties.example
@@ -5,3 +5,4 @@ SPRING_MAIL_PASSWORD=your-app-password
 APP_MAIL_FROM=E-Shop no-reply <no-reply@eshop.local>
 APP_ACTIVATION_BASE_URL=http://localhost:5173/auth/activate
 APP_ACTIVATION_TOKEN_EXPIRATION_MINUTES=1440
+APP_PASSWORD_RESET_TOKEN_EXPIRATION_MINUTES=15
