--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ backend/.env
 backend/**/*.h2.db
 backend/**/*.mv.db
 backend/e-shop/src/main/resources/data/*_seed_*.sql
+*_seed_*.sql
 *.pdf
 *-requirements.md
 *.jpg
