--- a/recomender/requirements.txt
+++ b/recomender/requirements.txt
@@ -1,19 +1,19 @@
 # ========================================
 # Deep Learning & Embeddings (GPU)
 # ========================================
-# torch==2.1.2+cu118           # GPU build (CUDA 11.8)
-# torchvision==0.16.2+cu118
-# --extra-index-url https://download.pytorch.org/whl/cu118
+torch==2.3.0+cu121
+torchvision==0.18.0+cu121
+torchaudio==2.3.0+cu121
+--extra-index-url https://download.pytorch.org/whl/cu121
 
-# transformers>=4.30.0
-# clip @ git+https://github.com/openai/CLIP.git
-# clip-by-openai >= 1.0
-# pillow==10.1.0
+transformers>=4.30.0
+clip @ git+https://github.com/openai/CLIP.git
+pillow==10.1.0
 
 # ========================================
 # Vector Search & ML Tools
 # ========================================
-# faiss-gpu == 1.7.4             # GPU version of FAISS
+faiss-gpu==1.7.2
 scikit-learn>=1.3.2
 scipy>=1.11.4
 numpy==1.26.2
@@ -44,6 +44,7 @@ schedule==1.2.0
 # Utilities
 # ========================================
 requests>=2.31.0
+
 #logging  # built-in, no need to install
 
 # ========================================
