--- a/recomender/Docker/Makefile
+++ b/recomender/Docker/Makefile
@@ -2,17 +2,21 @@
 # E-Shop Recommendation System - Makefile
 # ============================================================================
 
-.PHONY: help build up down logs status clean test full-pipeline
+.PHONY: help build up down logs status clean test smart-run run
 
 .DEFAULT_GOAL := help
 
+# Color definitions
 BLUE := \033[0;34m
 GREEN := \033[0;32m
 YELLOW := \033[1;33m
+RED := \033[0;31m
 NC := \033[0m
 
 help: ## Show this help message
-	@echo "$(GREEN)E-Shop Recommendation System - Available Commands$(NC)"
+	@echo "$(GREEN)============================================================================$(NC)"
+	@echo "$(GREEN)  E-Shop Recommendation System - Available Commands$(NC)"
+	@echo "$(GREEN)============================================================================$(NC)"
 	@echo ""
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "  $(BLUE)%-20s$(NC) %s\n", $$1, $$2}'
 	@echo ""
@@ -23,17 +27,17 @@ help: ## Show this help message
 
 build: ## Build Docker images
 	@echo "$(BLUE)Building Docker images...$(NC)"
-	docker compose build
+	cd Docker && docker compose build
 
 up: ## Start all services
 	@echo "$(BLUE)Starting services...$(NC)"
-	docker compose up -d postgres redis
+	cd Docker && docker compose up -d postgres redis
 	@sleep 5
-	docker compose up -d api
+	cd Docker && docker compose up -d api
 
 down: ## Stop all services
 	@echo "$(BLUE)Stopping services...$(NC)"
-	docker compose down
+	cd Docker && docker compose down
 
 restart: down up ## Restart all services
 
@@ -46,126 +50,128 @@ smart-run: ## Smart pipeline - auto-skip completed steps (RECOMMENDED)
 	@chmod +x smart_pipeline.sh
 	@./smart_pipeline.sh auto
 
+run: smart-run ## Alias for smart-run
+
 pipeline-status: ## Show pipeline status
 	@echo "$(BLUE)Checking pipeline status...$(NC)"
 	@chmod +x smart_pipeline.sh
 	@./smart_pipeline.sh status
 
-force-etl:
+force-etl: ## Force re-run ETL
 	@./smart_pipeline.sh force-etl
 
-force-clip:
+force-clip: ## Force re-run CLIP
 	@./smart_pipeline.sh force-clip
 
-force-workflow:
+force-workflow: ## Force re-run workflow
 	@./smart_pipeline.sh force-workflow
 
-force-faiss:
+force-faiss: ## Force rebuild FAISS
 	@./smart_pipeline.sh force-faiss
 
-force-all:
+force-all: ## Force complete re-run
 	@./smart_pipeline.sh force-all
 
 # ============================================================================
-# Individual Pipeline Stages
+# Individual Pipeline Stages (Manual)
 # ============================================================================
 
-etl:
+etl: ## Run ETL only
 	@echo "$(BLUE)Running ETL...$(NC)"
-	docker compose --profile etl up etl
+	cd Docker && docker compose --profile etl up etl
 
-clip:
+clip: ## Generate CLIP embeddings
 	@echo "$(BLUE)Generating CLIP embeddings...$(NC)"
-	docker compose --profile clip up clip-embeddings
+	cd Docker && docker compose --profile clip up clip-embeddings
 
-workflow:
+workflow: ## Run hybrid workflow
 	@echo "$(BLUE)Running hybrid workflow...$(NC)"
-	docker compose --profile workflow up workflow
+	cd Docker && docker compose --profile workflow up workflow
 
-build-index:
+build-index: ## Build FAISS index
 	@echo "$(BLUE)Building FAISS index...$(NC)"
-	docker compose --profile build-index up build-faiss
+	cd Docker && docker compose --profile build-index up build-faiss
 
-rebuild-index: build-index
+rebuild-index: build-index ## Rebuild FAISS and restart API
 	@echo "$(BLUE)Restarting API...$(NC)"
-	docker compose restart api
+	cd Docker && docker compose restart api
 
 # ============================================================================
 # Development
 # ============================================================================
 
-api:
+api: ## Start API server only
 	@echo "$(BLUE)Starting API server...$(NC)"
-	docker compose up -d postgres redis api
+	cd Docker && docker compose up -d postgres redis api
 	@sleep 3
 	@echo "$(GREEN)API available at: http://localhost:8000$(NC)"
 	@echo "$(GREEN)API docs at: http://localhost:8000/docs$(NC)"
 
-gradio:
+gradio: ## Start API + Gradio UI
 	@echo "$(BLUE)Starting API + Gradio...$(NC)"
-	docker compose --profile testing up -d api gradio-tester
+	cd Docker && docker compose --profile testing up -d api gradio-tester
 	@sleep 3
 	@echo "$(GREEN)API: http://localhost:8000$(NC)"
 	@echo "$(GREEN)Gradio: http://localhost:7860$(NC)"
 
-logs:
-	docker compose logs -f api
+logs: ## Show API logs
+	cd Docker && docker compose logs -f api
 
-logs-all:
-	docker compose logs -f
+logs-all: ## Show all logs
+	cd Docker && docker compose logs -f
 
-status:
+status: ## Show system status
 	@echo "$(BLUE)Container Status:$(NC)"
-	@docker compose ps
+	@cd Docker && docker compose ps
 	@echo ""
 	@echo "$(BLUE)API Health:$(NC)"
-	@curl -s http://localhost:8000/health | python3 -m json.tool || echo "API not available"
+	@curl -s http://localhost:8000/health 2>/dev/null | python3 -m json.tool || echo "$(YELLOW)API not available$(NC)"
 
 # ============================================================================
 # Testing
 # ============================================================================
 
-test:
+test: ## Run tests
 	@echo "$(BLUE)Running tests...$(NC)"
-	docker compose exec api pytest tests/ -v
+	cd Docker && docker compose exec api pytest tests/ -v
 
-test-api:
+test-api: ## Test API endpoints
 	@echo "$(BLUE)Testing API endpoints...$(NC)"
 	python etl/test_eshop_api.py
 
-benchmark:
+benchmark: ## Run benchmark
 	@echo "$(BLUE)Running benchmark...$(NC)"
-	docker compose exec api python test_eshop_api.py
+	cd Docker && docker compose exec api python test_eshop_api.py
 
 # ============================================================================
 # Database
 # ============================================================================
 
-db-shell:
-	docker compose exec postgres psql -U app -d eshop
+db-shell: ## Connect to PostgreSQL
+	cd Docker && docker compose exec postgres psql -U app -d eshop
 
-redis-cli:
-	docker compose exec redis redis-cli
+redis-cli: ## Connect to Redis
+	cd Docker && docker compose exec redis redis-cli
 
 # ============================================================================
 # Maintenance
 # ============================================================================
 
-clean:
+clean: ## Remove containers and volumes
 	@echo "$(YELLOW)Removing containers and volumes...$(NC)"
-	docker compose down -v
+	cd Docker && docker compose down -v
 
-clean-data:
+clean-data: ## Remove processed data
 	@echo "$(YELLOW)Removing processed data...$(NC)"
 	rm -rf etl/data/processed/*.npy
 	rm -rf etl/data/processed/*.pkl
 	rm -rf etl/data/faiss/*.faiss
 	rm -rf etl/logs/*.log
 
-clean-all: clean clean-data
+clean-all: clean clean-data ## Clean everything
 	@echo "$(GREEN)Everything cleaned$(NC)"
 
-prune:
+prune: ## Prune Docker resources
 	@echo "$(YELLOW)Pruning Docker resources...$(NC)"
 	docker system prune -f
 
@@ -173,29 +179,34 @@ prune:
 # Quick Start Guides
 # ============================================================================
 
-first-time:
-	@echo "$(GREEN)First Time Setup$(NC)"
-	@echo "This will run the complete pipeline..."
+first-time: ## First time setup (run complete pipeline)
+	@echo "$(GREEN)============================================================================$(NC)"
+	@echo "$(GREEN)  First Time Setup$(NC)"
+	@echo "$(GREEN)============================================================================$(NC)"
+	@echo ""
 	@make build
 	@make smart-run
 
-dev:
+dev: ## Development mode (build and start API)
 	@echo "$(GREEN)Development Mode$(NC)"
 	@make build
 	@make api
 	@make logs
 
-production:
+production: ## Production deployment
 	@echo "$(GREEN)Production Deployment$(NC)"
 	@make build
-	@docker compose up -d
+	cd Docker && docker compose up -d
 
 # ============================================================================
 # Information
 # ============================================================================
 
-info:
-	@echo "$(BLUE)System Information:$(NC)"
+info: ## Show system information
+	@echo "$(BLUE)============================================================================$(NC)"
+	@echo "$(BLUE)  System Information$(NC)"
+	@echo "$(BLUE)============================================================================$(NC)"
+	@echo ""
 	@echo "Docker Version: $$(docker --version)"
 	@echo "Docker Compose Version: $$(docker compose version)"
 	@echo ""
@@ -208,6 +219,6 @@ info:
 	@echo ""
 	@make status
 
-run: smart-run
-start: api
-stop: down
+# Aliases
+start: api ## Alias for 'api'
+stop: down ## Alias for 'down'
