--- a/recomender/Docker/docker-compose.yml
+++ b/recomender/Docker/docker-compose.yml
@@ -39,7 +39,7 @@ services:
   # ETL
   etl:
     build:
-      context: ..
+      context: .. # Từ thư mục gốc project
       dockerfile: Docker/Dockerfile
     container_name: eshop-etl
     entrypoint: ["/app/entrypoint.sh"]
@@ -51,9 +51,9 @@ services:
       - DB_USER=app
       - DB_PASSWORD=secret
     volumes:
+      # Mount từ thư mục gốc project (vì context là ..)
       - ../etl/data:/app/data
       - ../etl/logs:/app/logs
-      - ../etl/config.py:/app/config.py
     depends_on:
       postgres:
         condition: service_healthy
@@ -76,11 +76,9 @@ services:
       - DB_NAME=eshop
       - DB_USER=app
       - DB_PASSWORD=secret
-      # - CUDA_VISIBLE_DEVICES=0
     volumes:
       - ../etl/data:/app/data
       - ../etl/logs:/app/logs
-      - ../etl/config.py:/app/config.py
     depends_on:
       postgres:
         condition: service_healthy
@@ -88,7 +86,6 @@ services:
       - eshop-network
     profiles:
       - clip
-    # runtime: nvidia
 
   # Workflow
   workflow:
@@ -104,11 +101,9 @@ services:
       - DB_NAME=eshop
       - DB_USER=app
       - DB_PASSWORD=secret
-      # - CUDA_VISIBLE_DEVICES=0
     volumes:
       - ../etl/data:/app/data
       - ../etl/logs:/app/logs
-      - ../etl/config.py:/app/config.py
     depends_on:
       postgres:
         condition: service_healthy
@@ -116,7 +111,6 @@ services:
       - eshop-network
     profiles:
       - workflow
-    # runtime: nvidia
 
   # Build FAISS
   build-faiss:
@@ -151,7 +145,9 @@ services:
     volumes:
       - ../etl/data:/app/data
       - ../etl/logs:/app/logs
+
       - ../etl/Content_Base_Model/faiss_api.py:/app/faiss_api.py
+      - ../etl/config.py:/app/config.py
     depends_on:
       redis:
         condition: service_healthy
