--- a/recomender/requirements.txt
+++ b/recomender/requirements.txt
@@ -26,6 +26,7 @@ fastapi==0.109.0
 uvicorn[standard]==0.27.0
 pydantic==2.5.3
 
+
 # ========================================
 # Database & Cache
 # ========================================
@@ -46,6 +47,7 @@ schedule==1.2.0
 requests>=2.31.0
 
 #logging  # built-in, no need to install
+gradio==5.1.0
 
 # ========================================
 # Optional (for model training)
